# democratic_detrender

./: .gitignore  .readthedocs.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.md  cofi_AM.py  democratic_detrender.py  detrend.py  detrend_only.py  find_flux_jumps.py  get_lc.py  get_lc_and_detrend.py  gp.py  helper_functions.py  manipulate_data.py  method_rejection_via_DW.py  outlier_rejection.py  plot.py  poly_AM.py  poly_local.py  problem_times_only.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  package.yml  tests.yml
democratic_detrender/: __init__.py  binning_rejection_functions.py  cofi_AM.py  democratic_detrend.py  democratic_detrender.py  detrend.py  detrend_functions.py  detrend_only.py  dw_rejection_functions.py  find_flux_jumps.py  get_lc.py  gp.py  helper_functions.py  manipulate_data.py  method_reject.py  method_rejection_functions.py  method_rejection_functions_binning.py  method_rejection_functions_binning_slow.py  method_rejection_functions_dw.py  method_rejection_functions_dw_slow.py  method_rejection_functions_general.py  outlier_rejection.py  plot.py  poly_AM.py  poly_local.py  problem_times_only.py
docs/: api.rst  blank_page.md  cofi_AM.rst  conf.py  find_flux_jumps.rst  glossary.rst  gp.rst  index.md  index.rst  installation.md  installation.rst  outlier_rejection.rst  plot.rst  poly_AM.rst  requirements.txt
docs/_static/: logo_placeholder.avif
docs/api/: detrending.rst  find_flux_jumps.rst  get_lc.rst  helper_functions.rst  manipulate_data.rst  method_rejection_via_DW.rst  plotting.rst  poly_local.rst  preprocessing.rst
docs/tutorials/: blank_tutorial.ipynb  detrend_tutorial.ipynb  detrend_tutorial_Kepler1513.ipynb  identifying_problem_times.rst  load_lc_tutorial.ipynb  method_rejection_tutorial.ipynb  ttv_mask_tutorial_TOI216.ipynb
test/: test_detrend_all_smoke.py  test_method_reject_smoke.py  test_package_structure.py
tests/: test_detrend_all_smoke.py  test_get_lc_transit_times.py  test_helper_functions.py  test_method_reject_smoke.py
tutorials/detrend_tutorial/: detrend_tutorial.ipynb
tutorials/load_lc_tutorial/: load_lc_tutorial.ipynb
